updated table sorting, fixed overlap issues in dropdown menu, added token transactions request

--- a/src/Components/pages/Header/assets/notifications.module.css
+++ b/src/Components/pages/Header/assets/notifications.module.css
@@ -9,7 +9,7 @@
         border-radius: 4px;
         min-width: 450px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 3;
+        z-index: 4;
         top: 40px;
         left: -350px; /* Adjust the left position as needed */
     }
@@ -121,7 +121,7 @@
     border-radius: 4px;
     min-width: 400px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 3;
+    z-index: 4;
     top: 45px;
     left: -350px; /* Adjust the left position as needed */
 }
