--- a/src/Components/pages/Header/site-header.module.css
+++ b/src/Components/pages/Header/site-header.module.css
@@ -248,7 +248,7 @@
     padding: 1em;
     min-width: 400px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 3;
+    z-index: 4;
     top: 45px;
     left: -300px; /* Adjust the left position as needed */
 }
@@ -293,7 +293,7 @@
         padding: 1em;
         min-width: 450px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 3;
+        z-index: 4;
         top: 40px;
         left: -350px; /* Adjust the left position as needed */
     }
